<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrinkMate</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to DrinkMate!</string>
    <string name="bac_button">BAC Calculator</string>
    <string name="title_activity_bac">BacActivity</string>
    <string name="calculate_button">Calculate</string>
    <string name="gender_lbl">Gender</string>
    <string name="height_lbl">Height</string>
    <string name="weight_lbl">Weight</string>
    <string name="num_drinks_lbl">Number of Drinks</string>
    <string name="hours_lbl">Hours Drinking</string>
    <string name="ounces_lbl">Ounces Consumed</string>
    <string name="pecent_lbl">Percent Alcohol</string>
    
    <string name="hello_world">Hello world!</string>

</resources>
