<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BacActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/bac_button"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:onClick="calculateBac"
        android:text="@string/calculate_button"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/genderEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/gender"
        android:layout_toRightOf="@+id/btnCalc"
        android:ems="10"
        android:hint="(M or F)"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hours"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:hint="BAC Result"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gender"
        android:layout_below="@+id/weight"
        android:layout_marginTop="33dp"
        android:text="@string/hours_lbl"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginRight="61dp"
        android:layout_marginTop="274dp"
        android:layout_toLeftOf="@+id/btnCalc"
        android:text="@string/gender_lbl"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/gender"
        android:layout_centerVertical="true"
        android:text="@string/weight_lbl"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/ouncesTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="96dp"
        android:text="@string/ounces_lbl"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ouncesTv"
        android:layout_below="@+id/ouncesTv"
        android:layout_marginTop="42dp"
        android:text="@string/pecent_lbl"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/ouncesEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ouncesTv"
        android:layout_alignBottom="@+id/ouncesTv"
        android:layout_alignLeft="@+id/genderEt"
        android:layout_marginLeft="39dp"
        android:ems="10"
        android:textColor="@color/white" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/percentEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/ouncesEt"
        android:ems="10"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/timeEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hours"
        android:layout_alignBottom="@+id/hours"
        android:layout_toRightOf="@+id/resultTv"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/weightEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/weight"
        android:layout_toRightOf="@+id/ouncesTv"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white" />

</RelativeLayout>